# Normlt

./: build.gradle  gradle.properties  settings.gradle
.acside/editor/: openedFiles.json  openedFiles.json.bak
.github/workflows/: android-build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  virtual_container.cpp
app/src/main/cpp/imgui/: imgui.h
app/src/main/java/com/virtualcontainer/: AppLauncher.java  MainActivity.java  NativeBridge.java  VirtualContext.java  VirtualStorageManager.java
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
